# ento-bench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  entobench_helpers.cmake
apps/ubench/: CMakeLists.txt  conf.h  dot_prod.c  sum_reduction.c  ubench.cc
sandbox/semihosting/: CMakeLists.txt  Makefile  fopen_example.c  fopen_example.cc
src/: CMakeLists.txt
src/bench/: CMakeLists.txt  harness.h  harness.hh  roi.cc  roi.h
src/control/: CMakeLists.txt
src/control/pid/: CMakeLists.txt  pid.h
src/control/tinympc/: CMakeLists.txt  admm.cpp  admm.hpp  codegen.hpp  tiny_api.cpp  tiny_api.hpp  tiny_types.hpp
src/ento-bench/: CMakeLists.txt  bench_config.h  harness.h  problem.h  roi.cc  roi.h
src/ento-bench/test/: TestProblem.h  test_h7_scaling.cc  test_harness.cc  test_harness_dot_input_1.txt  test_harness_dot_input_2.txt  test_harness_dot_output_1.txt  test_harness_dot_output_2.txt
src/ento-control/: CMakeLists.txt  TinyMPCSolver.h  adaptive_control_problem.h  adaptive_controller.h  control_problem.h  geometric_controller.cc  geometric_controller.h  geometric_controller_problem.h  geometric_controller_solver.h  lqr.h  lqr_base.h  lqr_traits_robofly.h  opt_control_problem.h  osqp.h  osqp_bridge_template.h  osqp_generic_wrapper.h  robobee_mpc.cc  robobee_mpc.h  robobee_mpc_controller.h  tinympc_solver.h
src/ento-control/robobee_adaptive_controller/: README.md  integrated_controller.c  integrated_controller.h  integrated_controller_data.c  rtw_continuous.h  rtw_solver.h  rtwtypes.h
src/ento-control/test/: test_adaptive_controller.cc  test_adaptive_controller_trajectory.cc  test_control_benchmarks.cc  test_controller_validation.cc  test_debug_comparison.cc  test_dynamics_comparison.cc  test_geometric_controller_control_problem.cc  test_geometric_controller_reference.cc  test_lqr.cc  test_osqp_mpc.cc  test_position_control_comparison.cc  test_print.cc  test_real_data_benchmark.cc  test_robobee3d_mpc.cc  test_robobee_mpc.cc  test_robofly_tinympc.cc  test_template_mpc_opt_control.cc  test_tiny_mpc.cc  test_trajectory_benchmark.cc  trajectory_data.h
src/ento-feature2d/: CMakeLists.txt  OpticalFlowProblem.h  SparseOpticalFlowProblem.h  bb_optical_flow.h  bb_optical_flow_debug.h  brief.h  fast.h  feat2d_util.h  feature_detection_problem.h  feature_recognition_problem.h  ii_optical_flow.h  image_pyramid.h  image_pyramid_template.h  lk_optical_flow.h  lk_optical_flow_iter.h  multi_octave_sift.h  multi_octave_sift_v2.h  optical_flow_problem.h  orb.h  pyramid.h  raw_image.h  sad.h  sift.h  sparse_optical_flow_problem.h
src/ento-feature2d/test/: blob_32x32_test_ascii_test_sift_data.h  blob_32x32_test_sift_data.h  gaussian_test_data.h  gem5_pyr_prev_1.pgm  gem5_pyr_prev_2.pgm  image_2.pgm  image_2_1y.pgm  image_2_feats_next_gt.txt  image_2_shifted_x.pgm  image_2_shifted_xy.pgm  image_3.pgm  sift_data.h  test_bb_optical_flow.cc  test_fast.cc  test_fast1.pgm  test_feature2d_util.cc  test_feature_recognition_problem.cc  test_fixed__test_sift_data.h  test_ii_optical_flow.cc  test_image_pyramid.cc  test_img1_tiny_feats.txt  test_img2_tiny.pgm  test_img2_tiny_feats.txt  test_lk_optical_flow.cc  test_lk_optical_flow_iter.cc  test_sad.cc  test_sift.cc  test_sift.cc.backup  test_sift_blobs.h  test_sift_doubled_image.h  test_sift_mcu_image.h  test_simple_gaussian.cc  test_sparse_optical_flow_problem.cc
src/ento-math/: CMakeLists.txt  blas.h  blas_util.cc  blas_util.h  core.h  gemv.h  quaternion.h  svd.h
src/ento-math/test/: test_svd.cc
src/ento-mcu/: CMakeLists.txt  cache_util.cc  cache_util.h  clk_util.c  clk_util.h  conf.h  flash_util.cc  flash_util.h  gpio_util.cc  gpio_util.h  led_util.c  led_util.h  pwr_util.c  pwr_util.h  syscalls.c  systick_config.c  systick_config.h  timing.cc  timing.h
src/ento-pose/: CMakeLists.txt  bundle_adjustment.h  camera_models.h  data_gen.cc  data_gen.h  jacobian_accumulator.h  levenberg_marquadt.h  pose_util.h  prob_gen.cc  prob_gen.h  robust.h  robust_data_gen.cc  synthetic_abspose.h  synthetic_relpose.h
src/ento-state-est/: CMakeLists.txt  EKFProblem.h  data_generators.h  ekf.h  ekf_kernels.h  robobee_ekf.h  robofly_ekf_v1.h
src/ento-ubmark/: CMakeLists.txt  MatMulProblem.h  add_bits.cc  fixed_point.cc  float_add_rand.cc  float_add_zero.cc  float_div_rand.cc  float_div_zero.cc  float_mul_rand.cc  float_mul_zero.cc  float_sqrt_rand.cc  float_sqrt_zero.cc  floating_point.cc  fp_add_rand.h  fp_add_zero.h  fp_div_rand.h  fp_div_zero.h  fp_mul_rand.h  fp_mul_zero.h  fp_sqrt_rand.h  fp_sqrt_zero.h  int_add_rand.cc  int_add_rand.h  int_add_zero.cc  int_add_zero.h  int_div_rand.cc  int_div_rand.h  int_div_zero.cc  int_div_zero.h  int_mul_rand.cc  int_mul_rand.h  int_mul_zero.cc  int_mul_zero.h  mat_mul.cc  mat_mul_kernels.h  mul_acc.cc  xor_toggle.cc
src/ento-util/: CMakeLists.txt  alloc.h  bump_alloc.h  containers.h  dataset_reader.h  dataset_writer.h  debug.h  experiment_io.h  file_path_util.h  matrix_reader.h  mem.h  pose_est_reader.h  random.cc  random.h  unittest.cc  unittest.h
src/feature2d/: CMakeLists.txt  fast.cc  fast.h  orb.h  pyramid.h  util.h
src/image_io/: CMakeLists.txt  Image.h  KeyPoint.c  MonoImage16.c  MonoImage16.h  MonoImage8.c  MonoImage8.h  NaneyeImage.c  NaneyeImage.h  Pixel.h  dataset.c  dataset.h  imageIO.c  imageIO.h  image_util.h
src/linalg/: CMakeLists.txt  blas.c  blas.h  core.h  decomp.c  decomp.h  svd.c  svd.h
src/math/: EigenFixedPoint.hh  EigenSpecializations.hh  FixedPoint.hh  FixedPointMath.hh
src/mcu-util/: CMakeLists.txt  cache_util.cc  cache_util.h  clk_util.c  clk_util.h  conf.h  flash_util.c  flash_util.cc  flash_util.h  gpio_util.cc  gpio_util.h  led_util.c  led_util.h  pwr_util.c  pwr_util.h  syscalls.c  systick_config.h  timing.cc  timing.h
src/optical_flow/: FixedPoint.hh  ImagePyramid.cpp  RawImage.cpp  lk_optical_flow_fp_gem5  lk_optical_flow_fp_gem5.cpp
src/startup/: CMakeLists.txt  boot.ld  boot.s
src/state_est/: CMakeLists.txt
src/stm32-util/: CMakeLists.txt  led_util.h  systick_config.c  systick_config.h  timing.c  timing.h
src/sys/: CMakeLists.txt  syscalls.c
(+3551 files in other folders)
